objects/PowerBI_Report__mdt.object
<CustomObject>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <label>GroupId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportId__c</fullName>
        <label>ReportId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PowerBI Report</label>
    <pluralLabel>PowerBI Reports</pluralLabel>
</CustomObject>